1999-07-01  Thomas Bushnell, BSG  <tb@mit.edu>

	* node-nref.c: New file; guts from diskfs.h.
	* node-nput.c: Likewise.
	* node-nrele.c: Likewise.
	* node-nrefl.c: Likewise.
	* node-nputl.c: Likewise.
	* node-nrelel.c: LIkewise.
	* diskfs.h (diskfs_nref, diskfs_nput, diskfs_nrele,
	diskfs_nref_light, diskfs_nput_light, diskfs_nrele_light): Replace
	inline definitions with ordinary declarations.
	(DISKFS_EI): Removed macro.
	* diskfs.c: Deleted file.
	* Makefile (OTHERSRCS): Added node-nref.c, node-nput.c
	node-nrele.c, node-nrefl.c, node-nputl.c, node-nrelel.c.  Removed
	diskfs.c. 
	
1999-06-29  Thomas Bushnell, BSG  <tb@mit.edu>

	* dev-globals.c, dev-io.c, dev-open.c: Files removed.

	* lookup.c (diskfs_lookup): If we get an error from
	fshelp_checkdirmod, clear *NP as well as returning the error.
	Use diskfs_nrele instead of diskfs_nput in case *NP and DP are
	the same.

1999-06-28  Thomas Bushnell, BSG  <tb@mit.edu>

	* dir-rmdir.c (diskfs_S_dir_rmdir): Reorganized to make clearer;
	several little buglets fixed too.

1999-06-27  Thomas Bushnell, BSG  <tb@mit.edu>

	* sync-default.c (diskfs_default_sync_interval): Reduce to five
	seconds.  Hardware is much different than when Unix originally
	picked thirty, plus we manage VM differently than the Unix buffer
	cache did, and tend to delay many more writes than Unix did.

1999-06-13  Roland McGrath  <roland@baalperazim.frob.com>

	* file-get-trans.c (diskfs_S_file_get_translator): Fix type cast in
	last change.

	* file-get-trans.c (diskfs_S_file_get_translator): If we return an
	error, vm_deallocate any vm_allocated memory.
	From Mark Kettenis <kettenis@gnu.org>.

1999-06-02  Roland McGrath  <roland@baalperazim.frob.com>

	* boot-start.c (diskfs_start_bootstrap): Pass environment collected
	from `environ' on to init.  The kernel can send more parameters
	through this way without us knowing about them specifically.

1999-05-19  Roland McGrath  <roland@baalperazim.frob.com>
